--- a/04-fundamental-projects/13-strapi-submenus/starter/src/index.css
+++ b/04-fundamental-projects/13-strapi-submenus/starter/src/index.css
@@ -66,8 +66,8 @@ html {
 
 body {
   background: var(--backgroundColor);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
   line-height: 1;
   color: var(--textColor);
@@ -257,15 +257,15 @@ ul {
 PROJECT CSS 
 =============== 
 */
-
 body {
   background: var(--primary-500);
 }
 /* 
 ============= 
-Nav
+Navbar
 =============== 
 */
+
 nav {
   height: 5rem;
   display: flex;
@@ -277,12 +277,12 @@ nav {
   max-width: var(--max-width);
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
-
 .logo {
   text-transform: none;
   color: var(--white);
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   font-weight: 700;
 }
 .toggle-btn {
@@ -298,14 +298,13 @@ nav {
 .toggle-btn:hover {
   transform: scale(1.05);
 }
-
 /* 
 ============= 
 Hero
 =============== 
 */
 .hero-container {
-  min-height: calc(100vh - 10rem);
+  min-height: calc(100vh - 5rem);
   display: grid;
   place-items: center;
 }
@@ -314,6 +313,7 @@ Hero
   width: var(--fluid-width);
   max-width: var(--max-width);
 }
+
 .hero-center h1 {
   font-size: clamp(3rem, 5vw, 5rem);
   margin-bottom: 1rem;
@@ -321,10 +321,9 @@ Hero
   line-height: 1.25;
 }
 .hero-center p {
-  line-height: 1.5rem;
+  line-height: 1.5;
 }
 
-/*hide the toggle button on the big screen*/
 @media screen and (min-width: 992px) {
   .hero-center {
     text-align: center;
@@ -345,27 +344,29 @@ Sidebar
 */
 
 .sidebar {
-  position: fixed; /*take it out of the normal flow */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: var(--white);
-  /* toggle stuff */
+  /* toggle */
   opacity: 0;
   visibility: hidden;
 }
-/* toggle class */
 .show-sidebar {
   opacity: 1;
   visibility: visible;
   transition-property: opacity;
   transition-duration: 1s;
 }
+/* toggle class */
+
 .sidebar-container {
   padding: 4rem 2rem;
   position: relative;
 }
+
 .close-btn {
   font-size: 2rem;
   background: transparent;
@@ -374,6 +375,7 @@ Sidebar
   position: absolute;
   top: 1rem;
   right: 1rem;
+  cursor: pointer;
 }
 .sidebar article {
   margin-bottom: 2rem;
@@ -382,11 +384,13 @@ Sidebar
   margin-bottom: 1rem;
   color: var(--primary-700);
 }
+
 .sidebar-sublinks {
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 0.5rem;
 }
+
 .sidebar-sublinks a {
   display: block;
   color: var(--grey-900);
@@ -398,8 +402,6 @@ Sidebar
 .sidebar-sublinks svg {
   color: var(--grey-500);
 }
-
-/*if u  hide the toggle btn  at 992 px then you also need to  hide the sidebar  as well , at 992px the submenu is responsible for showing the sublinks */
 @media screen and (min-width: 992px) {
   .sidebar {
     display: none;
@@ -408,30 +410,23 @@ Sidebar
 
 /* 
 ============= 
-NavLinks
+Nav Links
 =============== 
 */
-
 .nav-links {
   display: none;
 }
-
 @media screen and (min-width: 992px) {
   .nav-links {
     display: flex;
     justify-content: center;
+
     align-self: stretch;
-    z-index: 1;
   }
-  /*inside the nav-center we have the nav-links*/
   .nav-center {
     align-self: stretch;
     display: grid;
     grid-template-columns: auto 1fr;
-    /* border: 2px solid red; */
-  }
-  .logo {
-    align-self: center;
   }
   .nav-link {
     padding: 0 1rem;
@@ -442,7 +437,6 @@ NavLinks
     text-transform: capitalize;
     letter-spacing: var(--letterSpacing);
     cursor: pointer;
-    /* border: 2px solid green; */
   }
 }
 
@@ -451,36 +445,33 @@ NavLinks
 Submenu
 =============== 
 */
-
 .submenu {
   display: none;
 }
-
 @media screen and (min-width: 992px) {
   .submenu {
     display: block;
     position: fixed;
-    top: 6rem;
+    top: 7rem;
     left: 50%;
     width: var(--fluid-width);
     max-width: var(--max-width);
     background: var(--white);
-    border-radius: var(--borderRadius);
     padding: 2rem;
-
     transform: rotateX(-90deg) translateX(-50%);
     transform-origin: top;
     perspective: 1000px;
-    /* toggle stuff */
+    border-radius: var(--borderRadius);
     visibility: hidden;
     opacity: 0;
     transition: transform 0.3s ease-in-out, opacity 0.2s ease-in-out;
-    /* border: 2px solid red; */
+    z-index: -1;
   }
   .show-submenu {
-    opacity: 1;
     visibility: visible;
-    transform: rotateX(0deg) translate(-50%);
+    opacity: 1;
+    transform: rotateX(0deg) translateX(-50%);
+    z-index: 10;
   }
   .submenu h5 {
     margin-bottom: 1rem;
